👌 fix overfloww buttons

--- a/src/styles/components/InsuranceCard.scss
+++ b/src/styles/components/InsuranceCard.scss
@@ -4,7 +4,7 @@
   background-color: $white;
   width: 8.3vw;
   text-align: center;
-  padding: 0.9vw 1vw;
+  padding: 5px 1vw;
   border-radius: 7px;
   border: 1px solid transparent;
   p {
