--- a/src/styles/components/InsuranceForm.scss
+++ b/src/styles/components/InsuranceForm.scss
@@ -7,7 +7,8 @@
   padding-top: 5vh;
   max-width: 1300px;
   width: 68vw;
-  height: calc(100vh - 100px);
+  // height: calc(100vh - 100px);
+  padding-bottom: 15px;
   &__form {
     display: flex;
     column-gap: 20px;
