--- a/src/styles/components/InsuranceSelector.scss
+++ b/src/styles/components/InsuranceSelector.scss
@@ -54,6 +54,7 @@
     content: attr(data);
     background: $gradient;
     -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
     transition: 200ms;
   }
